Fixed favicon shadow clipping.

--- a/less/newtab.less
+++ b/less/newtab.less
@@ -4,9 +4,9 @@
 @fontsDefault: LatoWebThin, sans-serif;
 
 body {
-    background-color: black;
-    background-image: url("../img/photo-1445089073948-809762476ed5.jpg");
-    background-image: url("https://source.unsplash.com/random/daily");
+    background-color: gray;
+    //background-image: url("../img/photo-1445089073948-809762476ed5.jpg");
+    //background-image: url("https://source.unsplash.com/random/daily");
     background-size: cover;
     
     margin: 0;
@@ -71,6 +71,9 @@ body {
     li {
         display:inline;
         margin: 0 0.4em 0 0.4em;
-        filter: drop-shadow(0 0 1em #FFF);
+
+        img {
+            filter: drop-shadow(0 0 1em #FFF);
+        }
     }
 }
